메인페이지 퍼블중

--- a/css/reset.css
+++ b/css/reset.css
@@ -1,1 +1,195 @@
 @charset "utf-8";
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+html {
+    scroll-behavior: smooth;
+    -webkit-font-smoothing: antialiased;
+}
+body {
+    word-break: keep-all;
+    -ms-word-break: keep-all;
+    overflow-wrap: break-word;
+    -webkit-text-size-adjust: 100% !important;
+    -moz-text-size-adjust: 100% !important;
+    -ms-text-size-adjust: 100% !important;
+    letter-spacing: -0.02em;
+}
+html, body, div, span, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, address, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strong, sub, sup, var,
+b, u, i,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header,
+nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+html, body {
+    width: 100%;
+    height: 100%;
+    font-size: 16px;
+    font-family: "Poppins", "pretendard", sans-serif;
+    color: var(--txt);
+}
+
+article, aside, details, figcaption, figure, 
+footer, header, menu, nav, section, picture, source {
+    display: block;
+}
+
+body {
+    line-height: 1.5;
+    box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-size: inherit;
+    line-height: 1.2;
+}
+p {
+    font-size: 1rem;
+    line-height: 1.6;
+}
+
+ol, ul {
+    list-style: none;
+}
+
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+caption {
+    text-align: left;
+    font-weight: normal;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+img {
+    vertical-align: middle;
+}
+img, video, audio {
+    max-width: 100%;
+    height: auto;
+    border: 0 none;
+}
+
+#skip {
+    position: relative;
+    z-index: 99;
+}
+#skip > a {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 35px;
+    background: #333;
+    color: #fff;
+    line-height: 35px;
+    text-align: center;
+    left: 0;
+    top: -35px;
+}
+#skip > a:focus, 
+#skip > a:active {
+    top: 0;
+}
+
+/* S : IOS 대응 */
+html {
+    -webkit-text-size-adjust: none;
+    -moz-text-size-adjust: none;
+    -ms-text-size-adjust: none;
+    -o-text-size-adjust: none;
+    /* text크기를 자동으로 조절하지 말아라 */
+}
+input, button {
+    appearance: auto;
+    border-radius: 0;
+}
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+select::-ms-expand {
+    display: none;
+    /* 화살표없애기 for ie10, 11 */
+}
+/* E : IOS 대응 */
+
+input, textarea, select, button {
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+}
+textarea {
+    overflow: auto;
+    resize: none;
+}
+pre {
+    width: 100%;
+    text-wrap: wrap;
+    font-family: "Poppins", "pretendard", sans-serif;
+}
+
+button, input[type="button"], input[type="submit"] {
+    cursor: pointer;
+}
+
+input:valid, textarea:valid, select:valid {
+    border-color: green;
+}
+input:invalid, textarea:invalid, select:invalid {
+    border-color: red;
+}
+
+.blind,
+legend,
+caption {
+    position: absolute !important;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    clip: rect(1px 1px 1px 1px);
+    clip: rect(1px, 1px, 1px, 1px);
+}
+
+@media (max-width: 767px) {
+    html, body {
+        font-size: 15px;
+    }
+}
