--- a/layout/header.html
+++ b/layout/header.html
@@ -4,8 +4,8 @@
     </div>
     <nav>
         <ul>
-            <li><a href="javascript:">Project</a></li>
-            <li><a href="javascript:">Work</a></li>
+            <li><a href="javascript:" id="to-project">Project</a></li>
+            <li><a href="javascript:" id="to-work">Work</a></li>
         </ul>
     </nav>
 </div>
