--- a/css/reset.css
+++ b/css/reset.css
@@ -43,6 +43,9 @@ time, mark, audio, video {
     font: inherit;
     vertical-align: baseline;
 }
+dt {
+    line-height: 1.3;
+}
 html, body {
     width: 100%;
     height: 100%;
