--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 
 /* S : 메인 */
+
     .page-main .main-title {
         padding: 100px 0 120px 0;
         text-align: center;
@@ -212,4 +213,112 @@
             font-size: 20px;
         }
     }
+
 /* E : 메인 */
+
+/* S : 서브 */
+
+    .page-sub .project-info {
+        display: flex;
+        flex-wrap: wrap-reverse;
+        row-gap: 3rem;
+        padding-top: 80px;
+    }
+    .page-sub .project-info .info-box {
+        width: 50%;
+    }
+    .page-sub .project-info .info-des {
+        padding-top: 20px;
+    }
+    .page-sub .project-info .info-des .tit-wrap > h2 {
+        margin-bottom: 1.5rem;
+        font-size: 48px;
+        font-weight: 700;
+        line-height: 1.3;
+    }
+    .page-sub .project-info .info-des > p {
+        font-size: 1.125rem;
+        margin-top: 3rem;
+    }
+    .page-sub .project-info .info-des .dl-wrap {
+        margin-top: 3rem;
+    }
+    .page-sub .project-info .info-des .dl-wrap dl {
+        display: flex;
+        column-gap: 1rem;
+        font-size: 1.125rem;
+    }
+    .page-sub .project-info .info-des .dl-wrap dl dt {
+        flex-shrink: 0;
+        width: 70px;
+        font-weight: 700;
+        line-height: 1.5;
+    }
+    .page-sub .project-info .info-des .dl-wrap dl ~ dl {
+        margin-top: 12px;
+    }
+    .page-sub .project-detail .detail-wrap {
+        margin-top: 120px;
+    }
+    .page-sub .project-detail .detail-wrap .detail-title {
+        margin-bottom: 30px;
+    }
+    .page-sub .project-detail .detail-wrap .detail-title > h3 {
+        font-size: 28px;
+        font-weight: 700;
+    }
+    .page-sub .project-detail .detail-wrap .detail-title > p {
+        margin-top: 8px;
+        font-size: 1.125rem;
+        color: var(--sub-txt);
+    }
+
+    @media (max-width: 1399px) {
+        .page-sub .project-info {
+            padding-top: 40px;
+        }
+        .page-sub .project-info .info-des {
+            padding-top: 0;
+        }
+        .page-sub .project-info .info-box {
+            width: 100%;
+        }
+        .page-sub .project-info .info-img {
+            text-align: center;
+        }
+        .page-sub .project-info .info-img img {
+            width: 80%;
+            object-fit: contain;
+        }
+    }
+
+    @media (max-width: 767px) {
+        .page-sub .project-info .info-des .tit-wrap > h2 {
+            font-size: 40px;
+        }
+        .page-sub .project-info .info-des > p,
+        .page-sub .project-info .info-des .dl-wrap {
+            margin-top: 2rem;
+        }
+        .page-sub .project-detail .detail-wrap {
+            margin-top: 60px;
+        }
+    }
+
+    @media (max-width: 499px) {
+        .page-sub .project-info .info-des .tit-wrap > h2 {
+            font-size: 32px;
+        }
+        .page-sub .project-info .info-des .tit-wrap > h2 br,
+        .page-sub .project-info .info-des > p br,
+        .page-sub .project-detail .detail-wrap .detail-title > p br {
+            display: none;
+        }
+        .page-sub .project-info .info-des .dl-wrap dl {
+            flex-direction: column;
+            align-items: flex-start;
+            row-gap: 0.5rem;
+        }
+    }
+
+/* E : 서브 */
