헤더 경로 수정

--- a/layout/header.html
+++ b/layout/header.html
@@ -1,6 +1,6 @@
 <div class="header-inner">
     <div class="logo">
-        <a href="../index.html">Jiwon</a>
+        <a href="/ssep/index.html">Jiwon</a>
     </div>
     <nav>
         <ul>
